// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initialLettersAlign renders 0 1`] = `
Array [
  .c0 {
  initial-letters-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLettersAlign renders function 1`] = `
Array [
  .c0 {
  initial-letters-align: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: has;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: has;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLettersAlign renders invalid theme path 1`] = `
Array [
  .c0 {
  initial-letters-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLettersAlign renders negative number 1`] = `
Array [
  .c0 {
  initial-letters-align: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLettersAlign renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  initial-letters-align: July;
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letters-align: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: July;
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letters-align: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letters-align: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letters-align: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`initialLettersAlign renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    initial-letters-align: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letters-align: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    initial-letters-align: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letters-align: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letters-align: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    initial-letters-align: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    initial-letters-align: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`initialLettersAlign renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  initial-letters-align: July;
}

@media May {
  .c0 {
    initial-letters-align: August;
  }
}

@media April {
  .c0 {
    initial-letters-align: September;
  }
}

@media January {
  .c0 {
    initial-letters-align: November;
  }
}

@media April {
  .c0 {
    initial-letters-align: August;
  }
}

@media June {
  .c0 {
    initial-letters-align: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: July;
}

@media May {
  .c0 {
    initial-letters-align: August;
  }
}

@media April {
  .c0 {
    initial-letters-align: September;
  }
}

@media January {
  .c0 {
    initial-letters-align: November;
  }
}

@media April {
  .c0 {
    initial-letters-align: August;
  }
}

@media June {
  .c0 {
    initial-letters-align: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    initial-letters-align: November;
  }
}

@media April {
  .c0 {
    initial-letters-align: January;
  }
}

@media January {
  .c0 {
    initial-letters-align: December;
  }
}

@media April {
  .c0 {
    initial-letters-align: April;
  }
}

@media June {
  .c0 {
    initial-letters-align: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    initial-letters-align: November;
  }
}

@media April {
  .c0 {
    initial-letters-align: January;
  }
}

@media January {
  .c0 {
    initial-letters-align: December;
  }
}

@media April {
  .c0 {
    initial-letters-align: April;
  }
}

@media June {
  .c0 {
    initial-letters-align: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`initialLettersAlign renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    initial-letters-align: July;
  }
}

@media April {
  .c0 {
    initial-letters-align: August;
  }
}

@media January {
  .c0 {
    initial-letters-align: September;
  }
}

@media April {
  .c0 {
    initial-letters-align: November;
  }
}

@media June {
  .c0 {
    initial-letters-align: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    initial-letters-align: July;
  }
}

@media April {
  .c0 {
    initial-letters-align: August;
  }
}

@media January {
  .c0 {
    initial-letters-align: September;
  }
}

@media April {
  .c0 {
    initial-letters-align: November;
  }
}

@media June {
  .c0 {
    initial-letters-align: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    initial-letters-align: January;
  }
}

@media April {
  .c0 {
    initial-letters-align: December;
  }
}

@media January {
  .c0 {
    initial-letters-align: April;
  }
}

@media April {
  .c0 {
    initial-letters-align: May;
  }
}

@media June {
  .c0 {
    initial-letters-align: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    initial-letters-align: January;
  }
}

@media April {
  .c0 {
    initial-letters-align: December;
  }
}

@media January {
  .c0 {
    initial-letters-align: April;
  }
}

@media April {
  .c0 {
    initial-letters-align: May;
  }
}

@media June {
  .c0 {
    initial-letters-align: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`initialLettersAlign renders postitive number 1`] = `
Array [
  .c0 {
  initial-letters-align: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLettersAlign renders string 1`] = `
Array [
  .c0 {
  initial-letters-align: July;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: July;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: June;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: June;
}

<div
    className="c0"
  />,
]
`;

exports[`initialLettersAlign renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`initialLettersAlign renders valid theme path 1`] = `
Array [
  .c0 {
  initial-letters-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  initial-letters-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
